--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title> Linvnew's Wiki </title>
     </head>
     <body>
-        <a href="/wiki/">Linvnew's Wiki</a>
+        <a href="/wiki/Linvnew's Wiki.htm">Linvnew's Wiki</a>
     </body>
 </html>
