--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <!--meta http-equiv="refresh" content="0; url=/wiki/" /-->
+        <!--meta http-equiv="refresh" content="0; url=/wiki/r" /-->
         <title> Linvnew's Wiki </title>
     </head>
     <body>
